Modify new index

--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -147,23 +147,101 @@
 </section>
 
 <!-- CONTACT SECTION -->
-<section id="contact" class="py-5 bg-black text-light">
-  <div class="container">
-    <h2 class="fw-bold mb-4 text-center">Get In Touch</h2>
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <p class="mb-4 text-center">
-          I'm always open to discussing new projects, creative ideas or opportunities to be part of your vision. Feel free to
-          reach out and I'll get back to you soon.
-        </p>
-        <div class="d-flex justify-content-center gap-3">
-          <a href="mailto:email@example.com" class="btn btn-primary">Email Me</a>
-          <a href="/contact" class="btn btn-outline-light">Contact Form</a>
-        </div>
+  <main class="container py-4 float-sm-start">
+      <div class="jumbotron text-center text-light text-opacity-75">
+          <h1 class="display-7">Welcome to the <%=title%> page</h1>
       </div>
-    </div>
+      <div class="d-flex flex-sm-row flex-column py-5 text-light">
+          <div class="p-2 flex-fill">
+              <div class="card-body text-center bg-black">
+                  <img src="../assets/images/juanAre.jpg" alt="Juan" class="rounded-circle img-fluid" style="width: 150px;">
+                  <h5 class="my-3">Juan Arevalo</h5>
+                  <p class=" text-secondary mb-1">Expert in Mining Equipment Wear Solutions with AI knowledge</p>
+                  <a href="/" class="text-secondary mb-3" style="display: block;" target="_blank">jbaruz.dev</a>
+                  <p class="text-secondary mb-4">Richmond Hill Area, Ontario, CA</p>
+              </div>
+      </div>
+      <div class="p-2 flex-fill">
+          <section style="background-color: black;">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-4">
+                          <div class="card-body p-0 bg-black">
+                              <ul class="list-group list-group-flush rounded-3">
+                                  <li
+                                  class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
+                                  <i class="fab fa-github fa-lg" style="color: #686060;"></i>
+                                  <p class="mb-0 text-secondary fw-bold">Jbaruz</p>
+                                  </li>
+                                  <li
+                                      class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
+                                      <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
+                                      <p class="mb-0 text-secondary fw-bold">@Jbaruz11</p>
+                                  </li>
+                                  <li
+                                      class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
+                                      <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
+                                      <p class="mb-0 text-secondary fw-bold">jbaruz1</p>
+                                  </li>
+                                  <li
+                                      class="list-group-item d-flex justify-content-evenly align-items-center p-3 bg-black">
+                                      <i class="fab fa-linkedin fa-lg" style="color: #3b5998;"></i>
+                                      <p class="mb-0 text-secondary fw-bold">jbaruz</p>
+                                  </li>
+                              </ul>
+                          </div>
+                      </div>
+                      <div class="col-lg-8">
+                          <div class="card mb-4 bg-primary">
+                              <div class="card-body text-light text-opacity-50 bg-primary">
+                                  <div class="row">
+                                      <div class="col-sm-3">
+                                          <p class="mb-0">Full Name</p>
+                                      </div>
+                                      <div class="col-sm-9">
+                                          <p class="mb-0 text-light">Juan Bibiano Arevalo Ruiz</p>
+                                      </div>
+                                  </div>
+                                  <hr>
+                                  <div class="row">
+                                      <div class="col-sm-3">
+                                          <p class="mb-0">Email</p>
+                                      </div>
+                                      <div class="col-sm-9">
+                                          <p class="mb-0 text-light">jbaruz@gmail.com</p>
+                                      </div>
+                                  </div>
+                                  <hr>
+                                  <div class="row">
+                                      <div class="col-sm-3">
+                                          <p class="mb-0">Mobile</p>
+                                      </div>
+                                      <meta name="format-detection" content="telephone=no">
+                                      <div class="col-sm-9">
+                                          <p class="mb-0 text-light"><span>(01) 437-557-6885</span></p>
+                                      </div>                                               
+                                  </div>
+                                  <hr>
+                                  <div class="row">
+                                      <div class="col-sm-3">
+                                          <p class="mb-0">Address</p>
+                                      </div>
+                                      <div class="col-sm-9">
+                                          <p class="mb-0 text-light">Etobicoke Area, Toronto, Ontario, CA</p>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+
+                          </div>
+                      </div>
+                  </div>
+          </section>
+      </div>
+
   </div>
-</section>
+
+</main>
 
 <!-- IMPORTANT LINKS SECTION -->
 <section id="links" class="py-5 bg-dark text-light">
