--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,7 +13,7 @@
                             <h5 class="my-3">Juan Arevalo</h5>
                             <p class=" text-secondary mb-1">Expert in Mining Equipment Wear Solutions with AI knowledge</p>
                             <a href="/" class="text-secondary mb-3" style="display: block;" target="_blank">jbaruz.dev</a>
-                            <p class="text-secondary mb-4">Etobicoke Area, Toronto, Ontario, CA</p>
+                            <p class="text-secondary mb-4">Richmond Hill Area, Ontario, CA</p>
                         </div>
                 </div>
                 <div class="p-2 flex-fill">
