Improve new index - contact area

--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -227,7 +227,7 @@
                                           <p class="mb-0">Address</p>
                                       </div>
                                       <div class="col-sm-9">
-                                          <p class="mb-0 text-light">Etobicoke Area, Toronto, Ontario, CA</p>
+                                          <p class="mb-0 text-light">Richmond Hill Area, Toronto, Ontario, CA</p>
                                       </div>
                                   </div>
                               </div>
