--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -14,7 +14,7 @@
 
                 <div class="col-md-4 col-12 text-md-between text-center">
                     <ul class="list-unstyled">
-                        <li><a href="/get" class="text-secondary text-decoration-none">GET Projects</a></li>
+                        <!--<li><a href="/get" class="text-secondary text-decoration-none">GET Projects</a></li>-->
                         <li><a href="/projects" class="text-secondary text-decoration-none">Tech Projects</a></li>
                         <li><a href="/link" class="text-secondary text-decoration-none">Links</a></li>
                     </ul>
