--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -22,9 +22,9 @@
                     <a class="nav-link" href="/contact"><i class="fa-regular fa-address-book"></i> Contact me</a>
                 </li>
 
-                <li class="nav-item  <%= title === 'Contact' ? 'active' : '' %>">
+                <!--<li class="nav-item  <%= title === 'Contact' ? 'active' : '' %>">
                     <a class="nav-link" href="/get"><i class="fa-regular fa-address-book"></i> GET Projects </a>
-                </li>
+                </li>-->
 
                 <li class="nav-item  <%= title === 'Project' ? 'active' : '' %>">
                     <a class="nav-link" href="/projects"><i class="fa-solid fa-list-check"></i> Tech Projects </a>
