--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
                         <div class="animated-link-container">
                             <a href="/about" class="animated-link">About me</a>
                             <a href="/contact" class="animated-link">Contact me</a>
-                            <a href="/get" class="animated-link">GET Projects</a>
+                            <!--<a href="/get" class="animated-link">GET Projects</a>-->
                             <a href="/projects" class="animated-link">Tech Projects</a>
                             <a href="/link" class="animated-link">Links</a>
                         </div>
